Fix table invisible first row

--- a/demo/styles/demo.css
+++ b/demo/styles/demo.css
@@ -259,6 +259,7 @@ body {
     flex: 1;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 }
 .demo-content__function {
     width: 100%;
